added blank photo page

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,6 @@
     <color name="action_bar_back">#D6D6D5</color>
 
     <string name="title_activity_about">About</string>
+    <string name="title_activity_photo">Photo</string>
 
 </resources>
